Updated Not Fixed Login-Signup 5 Aug

--- a/Kampus/css/login.css
+++ b/Kampus/css/login.css
@@ -9,7 +9,7 @@
 }
 
 body{
-    background-image: url("/Kampus/img/kampus2.jpg");
+    background-image: url("/img/kampus2.jpg");
    
     background-size: cover;
     background-repeat: no-repeat;
