--- a/Kampus/css/navbar.css
+++ b/Kampus/css/navbar.css
@@ -267,5 +267,7 @@ header{
 }
 
 @media only screen and (max-width:575px) and (min-width:500px){
-    
+    h2{
+        margin-top: 45rem;
+    }
 }
